updated migrataion and readme

--- a/Another URL Shortener/appsettings.json
+++ b/Another URL Shortener/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ShortURLDb;User Id=postgres;Password=1234;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=ShortURLDbV2;User Id=postgres;Password=1234;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
