added .vs to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 ﻿Another URL Shortener/obj
 Another URL Shortener/bin
 obj
+.vs/Another URL SHortener/DesignTimeBuild/.dtbcache.v2
+.vs/Another URL SHortener/v16/.suo
+.vs/Another URL Shortener/v17/.futdcache.v1
+.vs/Another URL Shortener/v17/.suo
+.vs/Another URL SHortener/DesignTimeBuild/.dtbcache.v2
+.vs/Another URL SHortener/v16/.suo
+.vs
