--- a/Another URL Shortener/Another URL Shortener.csproj
+++ b/Another URL Shortener/Another URL Shortener.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Unity.Container" Version="5.11.10" />
+    <PackageReference Include="Unity.Microsoft.DependencyInjection" Version="5.11.5" />
   </ItemGroup>
 </Project>
