updated config file name and config name

--- a/Another URL Shortener/appsettings.json
+++ b/Another URL Shortener/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ShortURLDbV2;User Id=postgres;Password=1234;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "Server=192.168.0.99;Port=5432;Database=ShortURLDbV2;User Id=postgres;Password=1234;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -10,7 +10,7 @@
     }
   },
   "AllowedHosts": "*",
-  "CustomConfig": {
-    "RootURL": "https://localhost:44326"
+  "CustomConfigs": {
+    "BaseAddress": "https://localhost:44326"
   }
 }
