Added second DB context (InMemory)

--- a/Another URL Shortener/appsettings.json
+++ b/Another URL Shortener/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AllowedHosts": "*",
   "CustomConfigs": {
-    "BaseAddress": "https://localhost:44326"
+    "BaseAddress": "https://localhost:44326",
+    "UniqueIdLength": 11 
   }
 }
