Updated readme, rearranged folder structure
moved docker files in different folder

--- a/Another URL Shortener/appsettings.json
+++ b/Another URL Shortener/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.0.99;Port=5432;Database=ShortURLDbV2;User Id=postgres;Password=1234;Integrated Security=true;Pooling=true;"
+    "LocalAppLocalSql": "Server=127.0.0.1;Port=5432;Database=ShortURLDbV2;User Id=postgres;Password=1234;Integrated Security=true;Pooling=true;",
+    "DockerAppLocalSql": "Server=192.168.0.111;Port=5432;Database=ShortURLDbV2;User Id=postgres;Password=1234;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
