Added redis cluster, updated readme

--- a/Another URL Shortener/appsettings.json
+++ b/Another URL Shortener/appsettings.json
@@ -12,6 +12,7 @@
   },
   "AllowedHosts": "*",
   "CustomConfigs": {
-    "BaseAddress": "https://localhost:44326"
+    "BaseAddress": "https://localhost:44326",
+    "RedisConnection": "localhost:30027"
   }
 }
